--- a/index.css
+++ b/index.css
@@ -358,349 +358,440 @@ header .navbar a:hover {
     }
   }
 
-.about{
-  min-height: 60vh;
-}
-#my_self {
 
-  font-size: 2rem;
 
-  font-family: 'Times New Roman', Times, serif;
-  color: #000;
-  font-weight: 500;
-  padding: 2rem 10;
-  max-width: 80vh;
-  margin-right: 5rem;
-  margin-left: 5rem;
-}
 
-#selfcontainer {
 
-  position: relative;
-  display: flex;
 
-  flex-flow: row;
-  min-height: 60vh;
-  flex-wrap: wrap;
-  overflow: hidden;
 
-  justify-content: center;
-  align-items: center;
-}
+  #my_self {
 
-@media (max-width: 627px) {
-  #selfcontainer #my_self {
-
+    font-size: 2.5rem;
+    gap: 1.5rem;
+    font-family: "Nunito";
+    color: #000;
+    font-weight: 600;
+    padding: 2rem 10;
+    max-width: 100vh;
+    margin-right: 5rem;
+    margin-left: 5rem;
+  }
+  
+  #selfcontainer {
+  
+    position: relative;
     display: flex;
+  
+    flex-flow: row;
+  
+    flex-wrap: wrap;
+    overflow: hidden;
+  
+    justify-content: center;
+    align-items: center;
+  }
+  
+  @media (max-width: 627px) {
+    #selfcontainer #my_self {
+  
+      display: flex;
+      flex-flow: column;
+      padding: 2rem 10px;
+      margin-top: 0px;
+      font-size: 1.5rem;
+    }
+  
+    #selfcontainer {
+      margin-top: 120px;
+      min-height: 0vh;
+    }
+  }
+  
+  #selfcontainer .image {
+    flex: 1 1 30rem;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+  }
+  
+  #selfcontainer .image img {
+    width: 60%;
+  
+    border-radius: 20%;
+  
+  }
+  
+  @media (max-width: 1914px) {
+    #selfcontainer {
+      margin-top: 120px;
+  
+    }
+  
+  }
+  
+  .continer-resume {
+    display: flex;
+    justify-content: start;
+    flex-flow: row;
+  }
+  
+  .resumebtn {
+    margin-top: 3rem;
+    margin-left: 3rem;
+    width: 15rem;
+    height: 9rem;
+  }
+  
+  .resumebtn .btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+    transition: 0.3s;
+    color: #fff;
+    background: #2506ad;
+    box-shadow: 0px 5px 10px rgba(48, 68, 247, 0.6);
+    font-family: "Nunito", sans-serif;
+  }
+  
+  
+  .resumebtn .btn:hover {
+    background: white;
+    color: #000;
+  }
+  
+  .box p span {
+    color: #2506ad;
+    font-weight: 600;
+  
+  }
+  
+  .heading i {
+    color: #2506ad;
+  }
+  
+  .heading span {
+    color: #2506ad;
+  }
+  
+  .language {
+    color: #2506ad;
+    font-weight: 600;
+  }
+  
+  .btn {
+    padding: 20px 60px;
+    text-decoration: none;
+  
+    position: relative;
+  
+  }
+  
+  .btn span {
+  
+    position: absolute;
+    background-color: #2745da;
+    transition: all 0.2s ease-in-out;
+  
+  }
+  
+  .btn span:nth-child(odd) {
+    width: 0;
+    height: 4px;
+  }
+  
+  .btn span:nth-child(even) {
+    width: 4px;
+    height: 0;
+  }
+  
+  .btn span:first-child {
+    left: 0;
+    top: 0;
+  }
+  
+  .btn span:nth-child(2) {
+    right: 0;
+    top: 0;
+    transition-delay: 0.4s;
+  }
+  
+  .btn span:nth-child(3) {
+    right: 0;
+    bottom: 0;
+    transition-delay: 0.4s;
+  }
+  
+  .btn span:last-child {
+    left: 0;
+    bottom: 0;
+    transition-delay: 0.6s;
+  
+  }
+  
+  .btn:hover span:nth-child(odd) {
+    width: 100%;
+  }
+  
+  .btn:hover span:nth-child(even) {
+    height: 100%;
+  }
+  
+  
+  
+  /*resume page start*/
+  .body {
+    background-color: #e5ecfb;
+  }
+  
+  .main-container {
+    border-radius: 30px;
+    font-size: 2.5rem;
+    gap: .5rem;
+    font-family: "Nunito";
+    color: #000;
+    font-weight: 600;
+    padding: 2rem 10;
+    max-width: 100%;
+    margin-right: 5rem;
+    margin-left: 5rem;
+    margin-bottom: 5rem;
+    margin-top: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     flex-flow: column;
-    padding: 2rem 10px;
-    margin-top: 0px;
-    font-size: 1.5rem;
-  }
-
-  #selfcontainer {
-    margin-top: 120px;
-    min-height: 0vh;
-  }
-}
-
-#selfcontainer .image {
-  flex: 1 1 30rem;
-  z-index: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-}
-
-#selfcontainer .image img {
-  width: 60%;
-
-  border-radius: 20%;
-
-}
-
-@media (max-width: 1914px) {
-  #selfcontainer {
-    margin-top: 120px;
-
-  }
-
-}
-
-.continer-resume {
-  display: flex;
-  justify-content: start;
-  flex-flow: row;
-}
-
-.resumebtn {
-  margin-top: 3rem;
-  margin-left: 3rem;
-  width: 15rem;
-  height: 9rem;
-}
-
-.resumebtn .btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  transition: 0.3s;
-  color: #fff;
-  background: #2506ad;
-  box-shadow: 0px 5px 10px rgba(48, 68, 247, 0.6);
-  font-family: "Nunito", sans-serif;
-}
-
-
-.resumebtn .btn:hover {
-  background: white;
-  color: #000;
-}
-
-.box p span {
-  color: #2506ad;
-  font-weight: 600;
-
-}
-
-.heading i {
-  color: #2506ad;
-}
-
-.heading span {
-  color: #2506ad;
-}
-
-.language {
-  color: #2506ad;
-  font-weight: 600;
-}
-
-.btn {
-  padding: 20px 60px;
-  text-decoration: none;
-
-  position: relative;
-
-}
-
-.btn span {
-
-  position: absolute;
-  background-color: #2745da;
-  transition: all 0.2s ease-in-out;
-
-}
-
-.btn span:nth-child(odd) {
-  width: 0;
-  height: 4px;
-}
-
-.btn span:nth-child(even) {
-  width: 4px;
-  height: 0;
-}
-
-.btn span:first-child {
-  left: 0;
-  top: 0;
-}
-
-.btn span:nth-child(2) {
-  right: 0;
-  top: 0;
-  transition-delay: 0.4s;
-}
-
-.btn span:nth-child(3) {
-  right: 0;
-  bottom: 0;
-  transition-delay: 0.4s;
-}
-
-.btn span:last-child {
-  left: 0;
-  bottom: 0;
-  transition-delay: 0.6s;
-
-}
-
-.btn:hover span:nth-child(odd) {
-  width: 100%;
-}
-
-.btn:hover span:nth-child(even) {
-  height: 100%;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-/*resume page start*/
-.body {
-  background-color: #e5ecfb;
-}
-
-.main-container {
-  border-radius: 30px;
-  font-size: 2.5rem;
-  gap: .5rem;
-  font-family: "Nunito";
-  color: #000;
-  font-weight: 600;
-  padding: 2rem 10;
-  max-width: 100%;
-  margin-right: 5rem;
-  margin-left: 5rem;
-  margin-bottom: 5rem;
-  margin-top: 5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: column;
-  flex-wrap: wrap;
-  background: #b5c1ef;
-  box-shadow: 0px 5px 10px rgba(48, 68, 247, 0.6);
-  overflow: hidden;
-}
-
-.main-container header {
-  width: 100%;
-  height: 60%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1.5rem;
-  padding: 2rem 10;
-
-  font-size: 3.5rem;
-  color: rgb(32, 32, 32);
-  font-weight: 800;
-  text-align: center;
-}
-
-.main-container header span {
-
-  color: rgb(30, 45, 142);
-}
-
-
-
-@media (max-width: 1231px) {
-  .container img {
-    width: 60rem;
-    height: 70rem;
-  }
-
-  .container video {
-    width: 50rem;
-    height: 40rem;
-  }
-
-
-}
-
-@media (max-width: 797px) {
-  .container img {
-    width: 40rem;
-    height: 50rem;
-  }
-
-  .container video {
-    width: 40rem;
-    height: 30rem;
-  }
-
-
-
-}
-
-
-.download_container {
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 3rem;
-  width: 35rem;
-  height: 9rem;
-  margin-bottom: 3rem;
-  color: #fff;
-  background: rgb(20, 29, 85);
-  box-shadow: 10px 25px 30px rgba(9, 17, 91, 0.6);
-  font-family: "Nunito", sans-serif;
-}
-
-.download_container:hover {
-  background: rgb(171, 172, 180);
-  box-shadow: 0px 5px 20px rgba(123, 13, 220, 0.6);
-}
-
-.download_container .btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  width: 35rem;
-  height: 9rem;
-
-  color: white;
-  font-weight: 600;
-
-
-}
-
-.download_container .btn:hover {
-  color: #000;
-  border-radius: 30px;
-}
-
-@media (max-width: 511px) {
-  .container img {
-    display: none;
-  }
-
-  .container video {
-    display: none;
-  }
-
-  .download_container {
-    height: 3rem;
-    width: 20rem;
+    flex-wrap: wrap;
+    background: #b5c1ef;
+    box-shadow: 0px 5px 10px rgba(48, 68, 247, 0.6);
     overflow: hidden;
   }
-
-  .download_container .btn {
-    height: 3rem;
-    font-size: 2rem;
-    margin-bottom: 2.5rem;
-    width: 10rem;
-  }
-
+  
   .main-container header {
-    font-size: 1.5rem;
+    width: 100%;
+    height: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+    padding: 2rem 10;
+  
+    font-size: 3.5rem;
+    color: rgb(32, 32, 32);
+    font-weight: 800;
+    text-align: center;
   }
+  
+  .main-container header span {
+  
+    color: rgb(30, 45, 142);
+  }
+  
+  
+  .container {
+    border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  
+  }
+  
+  .container iframe {
+  
+    
+    height: 100rem;
+    width: 100rem;
+    box-shadow: 0px 5px 10px rgba(48, 68, 247, 0.6);
+  }
+  
 
+  @media (max-width: 1231px) {
+    .container iframe {
+      width: 60rem;
+      height: 70rem;
+    }
+
+  
+  
+  }
+  
+  @media (max-width: 797px) {
+    .container iframe {
+      width: 40rem;
+      height: 50rem;
+    }
+  
+    
+  
+  
+  
+  }
+  
+  
+  .download_container {
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 3rem;
+    width: 35rem;
+    height: 9rem;
+    margin-bottom: 3rem;
+    color: #fff;
+    background: rgb(20, 29, 85);
+    box-shadow: 10px 25px 30px rgba(9, 17, 91, 0.6);
+    font-family: "Nunito", sans-serif;
+  }
+  
+  .download_container:hover {
+    background: rgb(171, 172, 180);
+    box-shadow: 0px 5px 20px rgba(123, 13, 220, 0.6);
+  }
+  
+  .download_container .btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 35rem;
+    height: 9rem;
+  
+    color: white;
+    font-weight: 600;
+  
+  
+  }
+  
+  .download_container .btn:hover {
+    color: #000;
+    border-radius: 30px;
+  }
+  
+  @media (max-width: 511px) {
+    .container iframe {
+      display: none;
+    }
+  
+ 
+    .download_container {
+      height: 3rem;
+      width: 20rem;
+      overflow: hidden;
+    }
+  
+    .download_container .btn {
+      height: 3rem;
+      font-size: 2rem;
+      margin-bottom: 2.5rem;
+      width: 10rem;
+    }
+  
+    .main-container header {
+      font-size: 1.5rem;
+    }
+  
+  
+  }
+  
+  /*resume page end*/
+
+
+
+
+  @media (max-width: 1231px) {
+    *{
+    margin: 0;padding: 0;
+    box-sizing: border-box;
+    
+}
+body{
+    overflow-x: hidden;
 
 }
 
-/*resume page end*/
+header nav{
+    position: absolute;
+    right: -50px;top: 150px;
+    display: flex;
+    flex-direction: column;
+
+}
+input{
+    width: 25px;
+    height: 25px;
+    appearance: none;
+
+    -webkit-appearance: none;
+    cursor: pointer;
+   
+    text-align: center;
+    border-radius: 5px;
+   
+
+}
+input::before{
+    content: '\f0c9';
+    font-family: 'Font Awesome 5 Free';
+    
+    font-weight: 700;
+    font-size: .8em;
+    z-index: 10;
+    color: white;
+}
+input:checked::before{
+   background-color: rgb(62, 77, 91);
+    content: '\f00d';
+    animation: anim 1s;
+}
+@keyframes anim {
+    0%{opacity: 0;}
+    100%{opacity: 1;}
+    
+}
+input::after{
+    content: '';
+    position: absolute;
+    background-color: #a07877;
+    top: -15%;right: -20px;
+    width: 140%;height: 120%;
+   
+  
+  
+   border-radius: 5px;
+   z-index: -1;
 
 
+}
+nav{
+    position: absolute;
+    margin-top: 15px;
 
-/*education columns stats*/
+}
+nav a{
+    transform: translate(100px);text-align: center;
+    padding: 10px 20px;
+    cursor: pointer;
+    background: rgb(204, 187, 187);
+    box-shadow: 0 0 15 rgb(0, 0, 0,103);
+    border-radius: 9px;
+    text-decoration: none;
+  
+    margin: 5px 3px;
+    transition: transform calc(var(--i)*.2s);
+}
+input:checked ~ nav a{
+    transform: translate(-90px);
 
+}
+nav a:hover{
+    background: #DD4A48;
+    padding: 10px 20px;
+    border-radius: 9px;
+}
+}
 
 .education {
   background: #e5ecfb;
@@ -805,220 +896,121 @@ header .navbar a:hover {
     flex-wrap: wrap;
   }
 }
-/*education columns end*/
 
-
-/*mobile start*/
-
-@media (max-width: 1231px) {
-  *{
-  margin: 0;padding: 0;
-  box-sizing: border-box;
-  
-}
-body{
-  overflow-x: hidden;
-
-}
-
-header nav{
-  position: absolute;
-  right: -50px;top: 150px;
-  display: flex;
-  flex-direction: column;
-
-}
-input{
-  width: 25px;
-  height: 25px;
-  appearance: none;
-
-  -webkit-appearance: none;
-  cursor: pointer;
- 
-  text-align: center;
-  border-radius: 5px;
- 
-
-}
-input::before{
-  content: '\f0c9';
-  font-family: 'Font Awesome 5 Free';
-  
-  font-weight: 700;
-  font-size: .8em;
-  z-index: 10;
-  color: white;
-}
-input:checked::before{
- background-color: rgb(62, 77, 91);
-  content: '\f00d';
-  animation: anim 1s;
-}
-@keyframes anim {
-  0%{opacity: 0;}
-  100%{opacity: 1;}
-  
-}
-input::after{
-  content: '';
-  position: absolute;
-  background-color: #a07877;
-  top: -15%;right: -20px;
-  width: 140%;height: 120%;
- 
-
-
- border-radius: 5px;
- z-index: -1;
-
-
-}
-nav{
-  position: absolute;
-  margin-top: 15px;
-
-}
-nav a{
-  transform: translate(100px);text-align: center;
-  padding: 10px 20px;
-  cursor: pointer;
-  background: rgb(204, 187, 187);
-  box-shadow: 0 0 15 rgb(0, 0, 0,103);
-  border-radius: 9px;
-  text-decoration: none;
-
-  margin: 5px 3px;
-  transition: transform calc(var(--i)*.2s);
-}
-input:checked ~ nav a{
-  transform: translate(-90px);
-
-}
-nav a:hover{
-  background: #DD4A48;
-  padding: 10px 20px;
-  border-radius: 9px;
-}
-}
-/*mobile end*/
-
-
-/*prject start*/
 
 .projects{
   
   
-    margin: 0;
-    padding: 0;
-    height: 60vh;
-    min-height: 80vh;
-    display: flex;
-   align-items: center;
-    font-family: consolas;
-    flex-direction: column;
-    overflow: auto;
-    
+  margin: 0;
+  padding: 0;
+  height: 60vh;
+  min-height: 80vh;
+  display: flex;
+ align-items: center;
+  font-family: consolas;
+  flex-direction: column;
+  overflow: auto;
+  
 }
 
 .projects::-webkit-scrollbar {
-  width: 1rem;
+width: 1rem;
 }
 .projects::-webkit-scrollbar-track {
-  background: rgb(235, 202, 245);
+background: rgb(235, 202, 245);
 }
 .projects::-webkit-scrollbar-thumb {
-  background: #420177;
+background: #420177;
 }
 .projects .heading{
-  font-size: 4.5rem;
-  font-weight: 800;
+font-size: 4.5rem;
+font-weight: 800;
 }
 
 
 .containers{
-  margin-top: 22px;
+margin-top: 22px;
 width: 1500px;
-  position: relative;
-  display: flex;
-  justify-content: space-around;
+position: relative;
+display: flex;
+justify-content: space-around;
 }
 
 .containers .card{
 position: relative;
-  cursor: pointer;
+cursor: pointer;
 }
 
 .containers .card .face{
-  width: 350px;
-  height: 200px;
-  transition: 0.5s;
+width: 350px;
+height: 200px;
+transition: 0.5s;
 }
 
 .containers .card .face.face1{
-  position: relative;
-  background: #333;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1;
-  transform: translateY(100px);
+position: relative;
+background: #333;
+display: flex;
+justify-content: center;
+align-items: center;
+z-index: 1;
+transform: translateY(100px);
 }
 
 .containers .card:hover .face.face1{
-  background: #ff0057;
-  transform: translateY(0);
+background: #ff0057;
+transform: translateY(0);
 }
 
 .containers .card .face.face1 .content{
-  opacity: 1;
-  transition: 0.5s;
+opacity: 1;
+transition: 0.5s;
 }
 
 
 
 .containers .card .face.face1 .content img{
-  width: 350px;
+width: 350px;
 }
 
 
 
 .containers .card .face.face2{
-  position: relative;
-  background: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-  box-sizing: border-box;
-  box-shadow: 8px  15px 20px 10px rgba(0, 0, 0, 0.596);
-  transform: translateY(-100px);
+position: relative;
+background: #fff;
+display: flex;
+justify-content: center;
+align-items: center;
+padding: 20px;
+box-sizing: border-box;
+box-shadow: 8px  15px 20px 10px rgba(0, 0, 0, 0.596);
+transform: translateY(-100px);
 }
 
 .containers .card:hover .face.face2{
-  transform: translateY(0);
+transform: translateY(0);
 }
 
 .containers .card .face.face2 .content p{
-  margin: 0;
-  padding: 0;
-  font-size: 2.3rem;
+margin: 0;
+padding: 0;
+font-size: 2.3rem;
 }
 
 .containers .card .face.face2 .content a{
-  margin: 15px 0 0;
-  display:  inline-block;
-  text-decoration: none;
-  font-weight: 900;
-  color: #333;
-  padding: 5px;
-  border: 1px solid #333;
-  font-size: 1.3rem;
+margin: 15px 0 0;
+display:  inline-block;
+text-decoration: none;
+font-weight: 900;
+color: #333;
+padding: 5px;
+border: 1px solid #333;
+font-size: 1.3rem;
 }
 
 .containers .card .face.face2 .content a:hover{
-  background: #333;
-  color: #fff;
+background: #333;
+color: #fff;
 }
 /*prject end*/
 
@@ -1029,79 +1021,79 @@ position: relative;
 
 
 .footer {
-  min-height: 40vh;
-  padding-top: 30px;
-  background: rgb(0, 1, 43);
- 
+min-height: 40vh;
+padding-top: 30px;
+background: rgb(0, 1, 43);
+
 }
 .footer .box-container {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+display: flex;
+justify-content: center;
+flex-wrap: wrap;
 }
 .footer .box-container .box {
-  flex: 1 1 25rem;
-  margin: 1.5rem;
+flex: 1 1 25rem;
+margin: 1.5rem;
 }
 .footer .box-container .box h3 {
-  font-size: 3rem;
-  color: #fff;
-  padding-bottom: 1rem;
-  font-weight: normal;
+font-size: 3rem;
+color: #fff;
+padding-bottom: 1rem;
+font-weight: normal;
 }
 .footer .box-container .box p {
-  font-size: 2rem;
-  color: #ccc;
-  padding: 0.7rem 0;
-  text-transform: none;
+font-size: 2rem;
+color: #ccc;
+padding: 0.7rem 0;
+text-transform: none;
 }
 .footer .box-container .box p i {
-  padding-right: 1rem;
-  color: #ffae00;
+padding-right: 1rem;
+color: #ffae00;
 }
 .footer .box-container .box a {
-  font-size: 2rem;
-  text-decoration: none;
-  color: rgb(238, 238, 238);
-  padding: 0.3rem 0;
-  display: block;
+font-size: 2rem;
+text-decoration: none;
+color: rgb(238, 238, 238);
+padding: 0.3rem 0;
+display: block;
 }
 .footer .box-container .box a:hover {
-  color: #ffae00;
+color: #ffae00;
 }
 .footer .box-container .box .share {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 1rem 0;
+display: flex;
+flex-wrap: wrap;
+padding: 1rem 0;
 }
 .footer .box-container .box .share a {
-  height: 2rem;
-  width: 2rem;
-  padding: 1rem;
-  text-align: center;
-  
-  font-size: 2rem;
-  margin-right: 1rem;
-  transition: 0.2s;
-  background: rgb(230, 230, 230);
-  color: #02094b;
-  border: none;
+height: 2rem;
+width: 2rem;
+padding: 1rem;
+text-align: center;
+
+font-size: 2rem;
+margin-right: 1rem;
+transition: 0.2s;
+background: rgb(230, 230, 230);
+color: #02094b;
+border: none;
 }
 .footer .box-container .box .share a:hover {
-  background: transparent;
-  transform: scale(0.98);
-  border: 0.1rem solid rgb(180, 178, 178);
-  color: #ffae00;
+background: transparent;
+transform: scale(0.98);
+border: 0.1rem solid rgb(180, 178, 178);
+color: #ffae00;
 }
 
 @media (max-width: 450px) {
-  .footer .box-container .box {
-    margin: 1.5rem;
-  }
-  .footer .box-container .box p {
-    padding: 0.7rem;
-  }
-  .footer .box-container .box .share a {
-    padding: 1.2rem;
-  }
+.footer .box-container .box {
+  margin: 1.5rem;
+}
+.footer .box-container .box p {
+  padding: 0.7rem;
+}
+.footer .box-container .box .share a {
+  padding: 1.2rem;
+}
 }
